Tweaks to chats to help relieve double posting, style correctly on IE7, and not index topics during live chats
git-svn-id: http://cubeless.dev.sabre.com:18080/svn/cubeless/communities/agentstream@19215 e05bbbe3-11a3-40ec-a18c-f20a9e1084ec

--- a/app/stylesheets/themes/agentstream/chat.scss
+++ b/app/stylesheets/themes/agentstream/chat.scss
@@ -140,6 +140,9 @@ div#chat_queue li {
   clear: both;
   margin-left: 14px;
 }
+div#chat_queue li div.text {
+  display: inline;
+}
 div#chat_queue li.past, div#chat_queue li.past div, div#chat_queue li.past div a {
   @extend .past_style;
 }
@@ -156,7 +159,6 @@ div#chat_queue ul li.future, div#chat_queue ol li.future {
 /* VOTING */
 div#chat_queue div.voting {
   float: right;
-  display: inline;
 }
 div#chat_queue a.vote {
   display: block;
